# teapot

./: .gitignore  CMakeLists.txt  README.md  geometry3.h  main.cpp  shaders.cpp  shaders.h
shaders/: light.frag.glsl
